# fluxo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PRODUCT_DISCOVERY.md  ROADMAP.md
scripts/: build.py
src/fluxo/: __main__.py  app.py
src/fluxo/models/: __init__.py  channel.py  channel_template.py  collection.py  epg.py  playlist.py  project.py
src/fluxo/parsers/: __init__.py  m3u_parser.py  xmltv_parser.py
src/fluxo/persistence/: __init__.py  autosave.py  settings.py
src/fluxo/server/: __init__.py  playlist_server.py  shared_link.py
src/fluxo/services/: __init__.py  bulk_operations.py  deduplication.py  epg_mapper.py  export_service.py  normalization.py  project_manager.py  sharing_service.py  statistics.py  template_service.py  validation.py
src/fluxo/ui/: main_window.py  shortcuts.py  theme.py
src/fluxo/ui/widgets/: __init__.py  channel_table.py  detail_panel.py  group_panel.py  search_bar.py  status_bar.py
src/fluxo/ui/widgets/dialogs/: __init__.py  bulk_edit_dialog.py  epg_dialog.py  export_dialog.py  import_dialog.py  settings_dialog.py  (+1 more)
tests/: conftest.py  test_integration.py  test_m3u_parser.py  test_models.py  test_services.py  test_v020_features.py  test_v030_features.py  test_v040_features.py  test_v110_features.py  test_xmltv_parser.py
tests/data/: sample.m3u  sample_epg.xml  sample_malformed.m3u
